# lab-03-shared-ptr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
include/: SharedPtr.h  SharedPtr.hpp  header.hpp  main.h  shared_pointer.hpp
scripts/: checks.sh
sources/: SharedPtr.cpp  main.cpp  shared_pointer.cpp  source.cpp
tests/: shared_pointer_test.cpp  test.cpp  test_runner.cpp
